--- a/index.html
+++ b/index.html
@@ -65,6 +65,283 @@
             </div>
         </div>
     </section>
+    <!-- About -->
+    <section id="about">
+        <p class="section__text__p1">Get To Know More</p>
+        <h1 class="title">About Me</h1>
+        <div class="section-container">
+            <div class="section__pic-container">
+                <img src="./assets/about-pic.png"
+                alt="Profile picture" class="about-pic" />
+            </div>
+            <div class="about-details-container">
+                <div class="about-containers">
+                    <div class="details-container">
+                        <img 
+                            src="./assets/experience.png"
+                            alt="Experiance Icon"
+                            class="icon"
+                        />
+                        <h3>Experiance</h3>
+                        <p>2+ years <br/>Websites Development</p>
+                    </div>
+                    <div class="details-container">
+                        <img 
+                            src="./assets/education.png"
+                            alt="Education Icon"
+                            class="icon"
+                        />
+                        <h3>Education</h3>
+                        <p>Bachelor of Science in Software Engineering</p>
+                    </div>
+                </div>
+                <div class="text-container">
+                    <p>Hi I'm AdnanZaib,
+                        I'm a professional TALL (Tailwind css, Alpine.js, Laravel, Livewire) Stack Developer.
+                        l build websites including SPA (Single Page Applications).
+                        I also build SAAS (Software As A Service) Applications according to the business niche, And possible give my best solution to the businesses.
+                        In my career, I have learnt, experienced and adapted new technologies and techniques that companies demands the most in their work flow...</p>
+                </div>
+            </div>
+        </div>
+        <img
+            src="./assets/arrow.png"
+            class="icon arrow"
+            onclick="location.href='./#experiance'"
+        />
+    </section>
+    <!-- experiance -->
+    <section id="experiance"> 
+        <p class="section__text__p1">Explore My</p>
+        <h1 class="title">Experiance</h1>
+        <div class="experience-details-container">
+            <div class="about-containers">
+                <div class="details-container">
+                    <h2 class="experiance-sub-title">Frontend Development</h2>
+                    <!-- fontend skills -->
+                    <div class="article-container">
+                        <article>
+                            <img src="./assets/checkmark.png" alt="Experiance Icon"
+                            class="icon"
+                            />
+                            <div>
+                                <h3>HTML</h3>
+                                <p>Experianced</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./assets/checkmark.png" alt="Experiance Icon"
+                            class="icon"
+                            />
+                            <div>
+                                <h3>CSS</h3>
+                                <p>Experianced</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./assets/checkmark.png" alt="Experiance Icon"
+                            class="icon"
+                            />
+                            <div>
+                                <h3>Tailwind CSS</h3>
+                                <p>Experianced</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./assets/checkmark.png" alt="Experiance Icon"
+                            class="icon"
+                            />
+                            <div>
+                                <h3>Javascript</h3>
+                                <p>Experianced</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./assets/checkmark.png" alt="Experiance Icon"
+                            class="icon"
+                            />
+                            <div>
+                                <h3>Bootstrap framework</h3>
+                                <p>Experianced</p>
+                            </div>
+                        </article>
+                    </div>
+                </div>
+                <div class="details-container">
+                    <h2 class="experiance-sub-title">Backend Development</h2>
+                    <!-- backend skills -->
+                    <div class="article-container">
+                        <article>
+                            <img src="./assets/checkmark.png" alt="Experiance Icon"
+                            class="icon"
+                            />
+                            <div>
+                                <h3>Laravel framework</h3>
+                                <p>Experianced</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./assets/checkmark.png" alt="Experiance Icon"
+                            class="icon"
+                            />
+                            <div>
+                                <h3>Livewire</h3>
+                                <p>Experianced</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./assets/checkmark.png" alt="Experiance Icon"
+                            class="icon"
+                            />
+                            <div>
+                                <h3>React js(SPA's)</h3>
+                                <p>Experianced</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./assets/checkmark.png" alt="Experiance Icon"
+                            class="icon"
+                            />
+                            <div>
+                                <h3>Alpine js</h3>
+                                <p>Experianced</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./assets/checkmark.png" alt="Experiance Icon"
+                            class="icon"
+                            />
+                            <div>
+                                <h3>Mysqli DBMS</h3>
+                                <p>Experianced</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./assets/checkmark.png" alt="Experiance Icon"
+                            class="icon"
+                            />
+                            <div>
+                                <h3>git/github</h3>
+                                <p>Experianced</p>
+                            </div>
+                        </article>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <img
+            src="./assets/arrow.png"
+            class="icon arrow"
+            onclick="location.href='./#projects'"
+        />
+    </section>
+    <!-- projects -->
+    <section id="projects">
+        <p class="section__text__p1">Browser My Recent</p>
+        <h1 class="title">Projects</h1>
+        <div class="experience-details-container">
+            <div class="about-containers">
+            <div class="details-container color-container">
+                <div class="article-container">
+                    <img
+                        src="./assets/project-1.png"
+                        alt="project"
+                        class="project-image"
+                    />
+                </div>
+                <h2 class="experiance-sub-title project-title">Project One</h2>
+                <div class="btn-container">
+                    <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/adnandevinlara/'">
+                        Github
+                    </button>
+                    <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/adnandevinlara/'">
+                        Live Demo
+                    </button>
+                </div>
+            </div>
+            <div class="details-container color-container">
+                <div class="article-container">
+                    <img
+                        src="./assets/project-2.png"
+                        alt="project"
+                        class="project-image"
+                    />
+                </div>
+                <h2 class="experiance-sub-title project-title">Project Two</h2>
+                <div class="btn-container">
+                    <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/adnandevinlara/'">
+                        Github
+                    </button>
+                    <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/adnandevinlara/'">
+                        Live Demo
+                    </button>
+                </div>
+            </div>
+            <div class="details-container color-container">
+                <div class="article-container">
+                    <img
+                        src="./assets/project-3.png"
+                        alt="project"
+                        class="project-image"
+                    />
+                </div>
+                <h2 class="experiance-sub-title project-title">Project Three</h2>
+                <div class="btn-container">
+                    <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/adnandevinlara/'">
+                        Github
+                    </button>
+                    <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/adnandevinlara/'">
+                        Live Demo
+                    </button>
+                </div>
+            </div>
+            </div>
+        </div>
+        <img
+            src="./assets/arrow.png"
+            class="icon arrow"
+            onclick="location.href='./#contacts'"
+        />
+    </section>
+    <!-- contacts -->
+    <section id="contacts">
+        <p class="section__text__p1">
+            Get In Touch
+        </p>
+        <h1 class="title">Contact Me</h1>
+        <div class="contact-info-upper-container">
+            <div class="contact-info-container">
+                <img
+                    src="./assets/email.png"
+                    alt="Email Icon"
+                    class="icon contact-icon email-icon"
+                />
+                <p><a href="mailto:adnanzaib486@gmail.com" title="Mail me">adnanzaib486@gmail.com</a></p>
+            </div>
+            <div class="contact-info-container">
+                <img
+                    src="./assets/linkedin.png"
+                    alt="LinkedIn Icon"
+                    class="icon contact-icon"
+                />
+                <p><a href="https://www.linkedin.com/in/adnan-zaib-devinlara/" title="adnan-zaib-devinlara">LinkedIn</a></p>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <nav class="nav-links-container">
+            <ul class="nav-links">
+                <li><a href="#about">About</a></li>
+                <li><a href="#experiance">Experiance</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#contacts">Contact</a></li>
+            </ul>
+        </nav>
+        <p>Copyright &#169; Adnan Zaib. All Rights Reserved.</p>
+    </footer>
     <script src="script.js"></script>
 </body>
 </html>
+
+
+
